--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-atom.css" 
+              "node_modules/ngx-spinner/animations/ball-atom.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "lodash"
+            ]
           },
           "configurations": {
             "production": {
