--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@angular/compiler": "^15.2.7",
     "@angular/core": "^15.2.7",
     "@angular/forms": "^15.2.7",
-    "@angular/material": "^15.2.6",
+    "@angular/material": "^15.2.8",
     "@angular/platform-browser": "^15.2.7",
     "@angular/platform-browser-dynamic": "^15.2.7",
     "@angular/router": "^15.2.7",
     "@auth0/angular-jwt": "^5.1.2",
+    "angular-animations": "^0.11.0",
     "ngx-spinner": "^15.0.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
