--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,18 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/leaflet/dist/images/",
+                "output": "./assets"
+              }
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-atom.css"
+              "node_modules/ngx-spinner/animations/ball-atom.css",
+              "node_modules/leaflet/dist/leaflet.css",
+              "node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
