--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^15.2.7",
     "@auth0/angular-jwt": "^5.1.2",
     "angular-animations": "^0.11.0",
+    "leaflet": "^1.9.3",
+    "leaflet-routing-machine": "^3.2.12",
     "ngx-spinner": "^15.0.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
@@ -33,6 +35,8 @@
     "@angular/compiler-cli": "^15.2.7",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.16",
+    "@types/leaflet": "^1.9.3",
+    "@types/leaflet-routing-machine": "^3.2.4",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
