--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.7",
     "@auth0/angular-jwt": "^5.1.2",
     "angular-animations": "^0.11.0",
+    "bootstrap": "^5.2.3",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
@@ -44,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "node-sass": "^8.0.0",
     "typescript": "~4.9.5"
   }
 }
