--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "@angular/platform-browser-dynamic": "^15.2.7",
     "@angular/router": "^15.2.7",
     "@auth0/angular-jwt": "^5.1.2",
+    "@swimlane/ngx-charts": "^20.1.2",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^2.0.0",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "ngx-spinner": "^15.0.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.3",
+    "tinycolor2": "^1.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -35,6 +39,10 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.7",
+    "@types/color-convert": "^2.0.0",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.5",
+    "@types/d3-shape": "^3.1.1",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.16",
     "@types/leaflet": "^1.9.3",
